{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 321,
  "lineage": "14c1badd-1f08-7579-6610-be0bfe6bf793",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:107404535822:vpc/vpc-0793f692bcdd2384f",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0087223fc51c64904",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-030acaa7dbabbae8f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0793f692bcdd2384f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-053bacde8b873701d",
            "owner_id": "107404535822",
            "tags": {
              "company": "sandbox",
              "project": "Nginx Dynamic Routing"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:107404535822:internet-gateway/igw-0737c8450ddb9a417",
            "id": "igw-0737c8450ddb9a417",
            "owner_id": "107404535822",
            "tags": {
              "company": "sandbox",
              "project": "Nginx Dynamic Routing"
            },
            "tags_all": {
              "company": "sandbox",
              "project": "Nginx Dynamic Routing"
            },
            "vpc_id": "vpc-0793f692bcdd2384f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nginx-router-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:107404535822:loadbalancer/app/nginx-router-alb/3bb376c29cf7b975",
            "arn_suffix": "app/nginx-router-alb/3bb376c29cf7b975",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "nginx-router-alb-807846519.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:107404535822:loadbalancer/app/nginx-router-alb/3bb376c29cf7b975",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "nginx-router-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0699359fc5c71a7ac"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a7cf15838aa6dc06"
              },
              {
                "subnet_id": "subnet-0b948e9dec594b1d7"
              }
            ],
            "subnets": [
              "subnet-0a7cf15838aa6dc06",
              "subnet-0b948e9dec594b1d7"
            ],
            "tags": {
              "company": "sandbox",
              "project": "Nginx Dynamic Routing"
            },
            "tags_all": {
              "company": "sandbox",
              "project": "Nginx Dynamic Routing"
            },
            "vpc_id": "vpc-0793f692bcdd2384f",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.router-alb-sg",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nginx-service-a-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:107404535822:loadbalancer/app/nginx-service-a-alb/cacb10b6e272f5a8",
            "arn_suffix": "app/nginx-service-a-alb/cacb10b6e272f5a8",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "nginx-service-a-alb-1359601605.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:107404535822:loadbalancer/app/nginx-service-a-alb/cacb10b6e272f5a8",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "nginx-service-a-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-03ef815ac38a9001e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a7cf15838aa6dc06"
              },
              {
                "subnet_id": "subnet-0b948e9dec594b1d7"
              }
            ],
            "subnets": [
              "subnet-0a7cf15838aa6dc06",
              "subnet-0b948e9dec594b1d7"
            ],
            "tags": {
              "company": "sandbox",
              "project": "Nginx Dynamic Routing"
            },
            "tags_all": {
              "company": "sandbox",
              "project": "Nginx Dynamic Routing"
            },
            "vpc_id": "vpc-0793f692bcdd2384f",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.upstream-alb-sg",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nginx-service-b-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:107404535822:loadbalancer/app/nginx-service-b-alb/2d8adef444df4cd1",
            "arn_suffix": "app/nginx-service-b-alb/2d8adef444df4cd1",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "nginx-service-b-alb-271853368.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:107404535822:loadbalancer/app/nginx-service-b-alb/2d8adef444df4cd1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "nginx-service-b-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-03ef815ac38a9001e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a7cf15838aa6dc06"
              },
              {
                "subnet_id": "subnet-0b948e9dec594b1d7"
              }
            ],
            "subnets": [
              "subnet-0a7cf15838aa6dc06",
              "subnet-0b948e9dec594b1d7"
            ],
            "tags": {
              "company": "sandbox",
              "project": "Nginx Dynamic Routing"
            },
            "tags_all": {
              "company": "sandbox",
              "project": "Nginx Dynamic Routing"
            },
            "vpc_id": "vpc-0793f692bcdd2384f",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.upstream-alb-sg",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nginx-router-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:107404535822:listener/app/nginx-router-alb/3bb376c29cf7b975/0caf23b36fb3a3fa",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:107404535822:targetgroup/nginx-router-tg-blue/973701cfd5de130d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:107404535822:listener/app/nginx-router-alb/3bb376c29cf7b975/0caf23b36fb3a3fa",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:107404535822:loadbalancer/app/nginx-router-alb/3bb376c29cf7b975",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.nginx-router-alb",
            "aws_lb_target_group.nginx-router-tg-blue",
            "aws_security_group.router-alb-sg",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nginx-service-a-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:107404535822:listener/app/nginx-service-a-alb/cacb10b6e272f5a8/bb579679d92e6732",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:107404535822:targetgroup/nginx-service-a-tg-blue/d67e264f89e02177",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:107404535822:listener/app/nginx-service-a-alb/cacb10b6e272f5a8/bb579679d92e6732",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:107404535822:loadbalancer/app/nginx-service-a-alb/cacb10b6e272f5a8",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.nginx-service-a-alb",
            "aws_lb_target_group.nginx-service-a-tg-blue",
            "aws_security_group.upstream-alb-sg",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nginx-service-b-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:107404535822:listener/app/nginx-service-b-alb/2d8adef444df4cd1/33ee93c67a0d768a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:107404535822:targetgroup/nginx-service-b-tg-blue/6cfed5c687c5ac38",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:107404535822:listener/app/nginx-service-b-alb/2d8adef444df4cd1/33ee93c67a0d768a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:107404535822:loadbalancer/app/nginx-service-b-alb/2d8adef444df4cd1",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.nginx-service-b-alb",
            "aws_lb_target_group.nginx-service-b-tg-blue",
            "aws_security_group.upstream-alb-sg",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx-router-tg-blue",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:107404535822:targetgroup/nginx-router-tg-blue/973701cfd5de130d",
            "arn_suffix": "targetgroup/nginx-router-tg-blue/973701cfd5de130d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:107404535822:targetgroup/nginx-router-tg-blue/973701cfd5de130d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "nginx-router-tg-blue",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0793f692bcdd2384f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx-router-tg-green",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:107404535822:targetgroup/nginx-router-tg-green/151a13646b439ff7",
            "arn_suffix": "targetgroup/nginx-router-tg-green/151a13646b439ff7",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:107404535822:targetgroup/nginx-router-tg-green/151a13646b439ff7",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "nginx-router-tg-green",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0793f692bcdd2384f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx-service-a-tg-blue",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:107404535822:targetgroup/nginx-service-a-tg-blue/d67e264f89e02177",
            "arn_suffix": "targetgroup/nginx-service-a-tg-blue/d67e264f89e02177",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "8081",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:107404535822:targetgroup/nginx-service-a-tg-blue/d67e264f89e02177",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "nginx-service-a-tg-blue",
            "port": 8081,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0793f692bcdd2384f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx-service-a-tg-green",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:107404535822:targetgroup/nginx-service-a-tg-green/4593e2471dc2817f",
            "arn_suffix": "targetgroup/nginx-service-a-tg-green/4593e2471dc2817f",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "8081",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:107404535822:targetgroup/nginx-service-a-tg-green/4593e2471dc2817f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "nginx-service-a-tg-green",
            "port": 8081,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0793f692bcdd2384f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx-service-b-tg-blue",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:107404535822:targetgroup/nginx-service-b-tg-blue/6cfed5c687c5ac38",
            "arn_suffix": "targetgroup/nginx-service-b-tg-blue/6cfed5c687c5ac38",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "8082",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:107404535822:targetgroup/nginx-service-b-tg-blue/6cfed5c687c5ac38",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "nginx-service-b-tg-blue",
            "port": 8082,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0793f692bcdd2384f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx-service-b-tg-green",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:107404535822:targetgroup/nginx-service-b-tg-green/519d5ec24933c077",
            "arn_suffix": "targetgroup/nginx-service-b-tg-green/519d5ec24933c077",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "8082",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:107404535822:targetgroup/nginx-service-b-tg-green/519d5ec24933c077",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "nginx-service-b-tg-green",
            "port": 8082,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0793f692bcdd2384f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:107404535822:route-table/rtb-008bf4c444f9892c2",
            "id": "rtb-008bf4c444f9892c2",
            "owner_id": "107404535822",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0737c8450ddb9a417",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "company": "sandbox",
              "project": "Nginx Dynamic Routing"
            },
            "tags_all": {
              "company": "sandbox",
              "project": "Nginx Dynamic Routing"
            },
            "timeouts": null,
            "vpc_id": "vpc-0793f692bcdd2384f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c16b3456a15b7029",
            "route_table_id": "rtb-008bf4c444f9892c2",
            "subnet_id": "subnet-0b948e9dec594b1d7"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb",
            "aws_subnet.subnet1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d99832a7140c3523",
            "route_table_id": "rtb-008bf4c444f9892c2",
            "subnet_id": "subnet-0a7cf15838aa6dc06"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb",
            "aws_subnet.subnet2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "router-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:107404535822:security-group/sg-0699359fc5c71a7ac",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0699359fc5c71a7ac",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "92.40.215.220/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "router-alb-sg",
            "name_prefix": "",
            "owner_id": "107404535822",
            "revoke_rules_on_delete": false,
            "tags": {
              "company": "sandbox",
              "project": "Nginx Dynamic Routing"
            },
            "tags_all": {
              "company": "sandbox",
              "project": "Nginx Dynamic Routing"
            },
            "timeouts": null,
            "vpc_id": "vpc-0793f692bcdd2384f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "router-service-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:107404535822:security-group/sg-059d8d2d3fc4898d5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-059d8d2d3fc4898d5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0699359fc5c71a7ac"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "router-service-sg",
            "name_prefix": "",
            "owner_id": "107404535822",
            "revoke_rules_on_delete": false,
            "tags": {
              "company": "sandbox",
              "project": "Nginx Dynamic Routing"
            },
            "tags_all": {
              "company": "sandbox",
              "project": "Nginx Dynamic Routing"
            },
            "timeouts": null,
            "vpc_id": "vpc-0793f692bcdd2384f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "upstream-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:107404535822:security-group/sg-03ef815ac38a9001e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03ef815ac38a9001e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "92.40.215.220/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-059d8d2d3fc4898d5"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "upstream-alb-sg",
            "name_prefix": "",
            "owner_id": "107404535822",
            "revoke_rules_on_delete": false,
            "tags": {
              "company": "sandbox",
              "project": "Nginx Dynamic Routing"
            },
            "tags_all": {
              "company": "sandbox",
              "project": "Nginx Dynamic Routing"
            },
            "timeouts": null,
            "vpc_id": "vpc-0793f692bcdd2384f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "upstream-service-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:107404535822:security-group/sg-096d1c9015b9e25a9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-096d1c9015b9e25a9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03ef815ac38a9001e"
                ],
                "self": false,
                "to_port": 8082
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-059d8d2d3fc4898d5"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "upstream-service-sg",
            "name_prefix": "",
            "owner_id": "107404535822",
            "revoke_rules_on_delete": false,
            "tags": {
              "company": "sandbox",
              "project": "Nginx Dynamic Routing"
            },
            "tags_all": {
              "company": "sandbox",
              "project": "Nginx Dynamic Routing"
            },
            "timeouts": null,
            "vpc_id": "vpc-0793f692bcdd2384f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "router-alb-sg-rule-ingress-rule-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "92.40.215.220/32"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-3747596809",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0699359fc5c71a7ac",
            "security_group_rule_id": "sgr-031c73606036d4096",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.router-alb-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "router-service-sg-rule-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 8080,
            "id": "sgrule-2115317261",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-059d8d2d3fc4898d5",
            "security_group_rule_id": "sgr-00b4a4346433eccf5",
            "self": false,
            "source_security_group_id": "sg-0699359fc5c71a7ac",
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.router-alb-sg",
            "aws_security_group.router-service-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "upstream-alb-sg-rule-egress-rule-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2252890271",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0699359fc5c71a7ac",
            "security_group_rule_id": "sgr-0d1cba8a22bceb293",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.router-alb-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "upstream-alb-sg-rule-egress-rule-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2678209649",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-03ef815ac38a9001e",
            "security_group_rule_id": "sgr-027187b4e1944641a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.upstream-alb-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "upstream-alb-sg-rule-ingress-rule-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "92.40.215.220/32"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-907834262",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03ef815ac38a9001e",
            "security_group_rule_id": "sgr-003cdcaf78d777517",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.upstream-alb-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "upstream-alb-sg-rule-ingress-rule-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 80,
            "id": "sgrule-882388997",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03ef815ac38a9001e",
            "security_group_rule_id": "sgr-09ed3b8755c410019",
            "self": false,
            "source_security_group_id": "sg-059d8d2d3fc4898d5",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.router-service-sg",
            "aws_security_group.upstream-alb-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "upstream-service-sg-rule-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 8080,
            "id": "sgrule-666789589",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-096d1c9015b9e25a9",
            "security_group_rule_id": "sgr-0940c19ba88e1a2f2",
            "self": false,
            "source_security_group_id": "sg-03ef815ac38a9001e",
            "timeouts": null,
            "to_port": 8082,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.upstream-alb-sg",
            "aws_security_group.upstream-service-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:107404535822:subnet/subnet-0b948e9dec594b1d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b948e9dec594b1d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "107404535822",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "company": "sandbox",
              "project": "Nginx Dynamic Routing"
            },
            "tags_all": {
              "company": "sandbox",
              "project": "Nginx Dynamic Routing"
            },
            "vpc_id": "vpc-0793f692bcdd2384f"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:107404535822:subnet/subnet-0a7cf15838aa6dc06",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a7cf15838aa6dc06",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "107404535822",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "company": "sandbox",
              "project": "Nginx Dynamic Routing"
            },
            "tags_all": {
              "company": "sandbox",
              "project": "Nginx Dynamic Routing"
            },
            "vpc_id": "vpc-0793f692bcdd2384f"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:107404535822:vpc/vpc-0793f692bcdd2384f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f654ae79739c13e4",
            "default_route_table_id": "rtb-053bacde8b873701d",
            "default_security_group_id": "sg-0a7515ec938648525",
            "dhcp_options_id": "dopt-030acaa7dbabbae8f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0793f692bcdd2384f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-053bacde8b873701d",
            "owner_id": "107404535822",
            "tags": {
              "company": "sandbox",
              "project": "Nginx Dynamic Routing"
            },
            "tags_all": {
              "company": "sandbox",
              "project": "Nginx Dynamic Routing"
            }
          }
        }
      ]
    }
  ]
}